[package]
name = "uwuizer"
version = "0.3.0"
authors = ["kaleidosium <atomicnumberphi@gmail.com>"]
edition = "2021"
license = "Unlicense"
description = "Rust Macro to UwUize your text. UwU."
readme = "README.md"
documentation = "https://docs.rs/uwuizer/"
repository = "https://github.com/Kaleidosium/uwuizer"
keywords = ["Macro", "Fun", "UwU", "OwO"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.8"